syntax = "proto3";

package go.micro.debug;

service Debug {
	rpc Health(Request) returns (HealthResponse) {};
	rpc Log(Request) returns (LogResponse) {};
	rpc Stats(Request) returns (StatsResponse) {};
	rpc Trace(Request) returns (TraceResponse) {};
}

message Check {}
message Log {}
message Stats {}
message Trace {}

message Request {
	string id = 1;
}

message HealthResponse {
	string status = 1;
	repeated Check checks = 2;
}

message LogResponse {
	repeated Log logs = 1;
}

message StatsResponse {
	repeated Stats stats = 1;
}

message TraceResponse {
	repeated Trace traces = 1;
}
